project(eh_sim)
cmake_minimum_required(VERSION 3.1)
find_package(OpenCV REQUIRED)
#add_definitions(-DDEBUG)
#add_definitions(-g)
add_subdirectory(utils)
aux_source_directory(. DIR_SRCS)
add_executable(t_main ${DIR_SRCS})
target_link_libraries(t_main UTILS ${OpenCV_LIBS})

set(CMAKE_CXX_COMPILER      "g++" )
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS   "-g")
